WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194822
RenderThemeIOS should use RenderTheme's color cache instead of its own
https://bugs.webkit.org/show_bug.cgi?id=194822
Summary
RenderThemeIOS should use RenderTheme's color cache instead of its own
Timothy Hatcher
Reported
2019-02-19 11:37:04 PST
This better aligns the macOS and iOS code by using the cross platform color cache.
Attachments
Patch
(12.57 KB, patch)
2019-02-19 11:41 PST
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Patch
(13.11 KB, patch)
2019-02-19 12:07 PST
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews125 for ios-simulator-wk2
(9.90 MB, application/zip)
2019-02-19 14:18 PST
,
EWS Watchlist
no flags
Details
Patch
(16.70 KB, patch)
2019-02-19 14:42 PST
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews201 for win-future
(12.83 MB, application/zip)
2019-02-19 17:24 PST
,
EWS Watchlist
no flags
Details
Patch
(17.51 KB, patch)
2019-02-19 20:34 PST
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-02-19 11:38:01 PST
<
rdar://problem/48208296
>
Timothy Hatcher
Comment 2
2019-02-19 11:41:04 PST
Comment hidden (obsolete)
Created
attachment 362405
[details]
Patch
Timothy Hatcher
Comment 3
2019-02-19 12:07:04 PST
Comment hidden (obsolete)
Created
attachment 362407
[details]
Patch
EWS Watchlist
Comment 4
2019-02-19 14:18:03 PST
Comment hidden (obsolete)
Comment on
attachment 362407
[details]
Patch
Attachment 362407
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/11207258
New failing tests: fast/css/apple-system-colors.html fast/viewport/ios/device-width-viewport-after-changing-view-scale.html
EWS Watchlist
Comment 5
2019-02-19 14:18:05 PST
Comment hidden (obsolete)
Created
attachment 362426
[details]
Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Timothy Hatcher
Comment 6
2019-02-19 14:42:35 PST
Comment hidden (obsolete)
Created
attachment 362433
[details]
Patch
EWS Watchlist
Comment 7
2019-02-19 14:45:11 PST
Comment hidden (obsolete)
Attachment 362433
[details]
did not pass style-queue: ERROR: Source/WebCore/css/parser/CSSPropertyParser.cpp:170: Line contains only semicolon. If this should be an empty statement, use { } instead. [whitespace/semicolon] [5] Total errors found: 1 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
EWS Watchlist
Comment 8
2019-02-19 17:23:51 PST
Comment hidden (obsolete)
Comment on
attachment 362433
[details]
Patch
Attachment 362433
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/11210414
New failing tests: fast/css/apple-system-colors.html
EWS Watchlist
Comment 9
2019-02-19 17:24:02 PST
Comment hidden (obsolete)
Created
attachment 362458
[details]
Archive of layout-test-results from ews201 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews201 Port: win-future Platform: CYGWIN_NT-6.1-2.10.0-0.325-5-3-x86_64-64bit
Timothy Hatcher
Comment 10
2019-02-19 20:34:10 PST
Created
attachment 362477
[details]
Patch
EWS Watchlist
Comment 11
2019-02-19 20:35:55 PST
Attachment 362477
[details]
did not pass style-queue: ERROR: Source/WebCore/css/parser/CSSPropertyParser.cpp:170: Line contains only semicolon. If this should be an empty statement, use { } instead. [whitespace/semicolon] [5] Total errors found: 1 in 13 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 12
2019-02-20 11:28:34 PST
Comment on
attachment 362477
[details]
Patch Clearing flags on attachment: 362477 Committed
r241825
: <
https://trac.webkit.org/changeset/241825
>
WebKit Commit Bot
Comment 13
2019-02-20 11:28:35 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug