RenderThemeIOS should use RenderTheme's color cache instead of its own. https://bugs.webkit.org/show_bug.cgi?id=194822 rdar://problem/48208296

Reviewed by Tim Horton.

Source/WebCore:

Tested by fast/css/apple-system-colors.html.

* css/CSSValueKeywords.in:
* css/parser/CSSPropertyParser.cpp:
(WebCore::isAppleLegacyCssValueKeyword):
* platform/graphics/Color.h:
* platform/graphics/cg/ColorCG.cpp:
(WebCore::makeRGBAFromCGColor):
(WebCore::Color::Color):
* rendering/RenderThemeIOS.h:
* rendering/RenderThemeIOS.mm:
(WebCore::RenderThemeIOS::systemColor const):
* rendering/RenderThemeMac.mm:
(WebCore::RenderThemeMac::systemColor const):

Source/WebCore/PAL:

* pal/ios/UIKitSoftLink.h:
* pal/ios/UIKitSoftLink.mm:
* pal/spi/ios/UIKitSPI.h:

LayoutTests:

* platform/ios/fast/css/apple-system-colors-expected.txt: Rebased for -apple-system-purple.
* platform/win/fast/css/apple-system-colors-expected.txt: Rebased for invalid color now
that -apple-system colors are macOS and iOS only.


Canonical link: https://commits.webkit.org/209225@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241825 268f45cc-cd09-0410-ab3c-d52691b4dbfc